# reader-one

backend/: pyproject.toml
backend/xlingual/: manage.py
backend/xlingual/readerapp/: admin.py  models.py  serializers.py  urls.py  views.py
backend/xlingual/readerapp/migrations/: 0001_initial.py
backend/xlingual/xlingual/: .env  asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Chapter.js  Footer.js  Home.js  Navbar.js  Topbar.js
